Apply patch by  Berthier Lemieux

BUG: 248087

svn path=/trunk/extragear/graphics/digikam/; revision=1181721